# nautilus_trader

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  NEW_BAR_AGGREGATORS.md  NIX_PACKAGING_GUIDE.md  RELEASES.md  default.nix  flake.nix  justfile  result
.claude/: settings.local.json
crates/adapters/databento/src/: loader.rs
crates/adapters/databento/src/python/: loader.rs
crates/adapters/tastytrade/: .gitignore  Cargo.toml  README.md
crates/adapters/tastytrade/docs/: phase0-payload-schemas.md
crates/adapters/tastytrade/examples/: phase0_spike.rs
crates/adapters/tastytrade/src/: config.rs  lib.rs
crates/adapters/tastytrade/src/common/: consts.rs  credential.rs  enums.rs  mod.rs  urls.rs
crates/adapters/tastytrade/src/http/: client.rs  error.rs  mod.rs  models.rs
crates/model/src/data/: consolidated_bbo.rs  mod.rs
docs/integrations/: tastytrade.md
examples/: demo_new_bar_aggregators.py
examples/live/tastytrade/: connect.py
examples/nix/: .github-workflows-nix.yml  README.md  consumer-flake.nix  derivation.nix
nautilus_trader/adapters/databento/: enums.py  loaders.py
nautilus_trader/adapters/tastytrade/: __init__.py  common.py  config.py  data.py  execution.py  factories.py  providers.py
nautilus_trader/adapters/tastytrade/http/: client.py  endpoints.py
nautilus_trader/adapters/tastytrade/parsing/: instruments.py  price_conversion.py
nautilus_trader/core/: data.pxd  data.pyx
nautilus_trader/core/includes/: model.h
nautilus_trader/core/rust/: model.pxd
nautilus_trader/data/: aggregation.pxd  aggregation.pyx  engine.pyx  messages.pyx
nix/: IMPLEMENTATION_SUMMARY.md  NIX_README.md  build-helper.sh  overlays.nix
tests/integration_tests/adapters/databento/: test_loaders.py
tests/unit_tests/adapters/tastytrade/: test_http_client.py  test_instrument_provider.py  test_parsing_equity_option.py  test_parsing_futures_option.py  test_provider_options.py
tests/unit_tests/data/: test_aggregation.py
