[package]
name = "nautilus-tastytrade"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "tastytrade integration adapter for the Nautilus trading engine"
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[lib]
name = "nautilus_tastytrade"
crate-type = ["rlib"]

[features]
default = ["high-precision"]
extension-module = [
  "nautilus-common/extension-module",
  "nautilus-core/extension-module",
  "nautilus-live/extension-module",
  "nautilus-model/extension-module",
  "nautilus-network/extension-module",
  "pyo3/extension-module",
  "python",
]
python = [
  "dep:nautilus-system",
  "nautilus-common/python",
  "nautilus-core/python",
  "nautilus-live/python",
  "nautilus-model/python",
  "nautilus-network/python",
  "nautilus-system/python",
  "pyo3",
  "pyo3-stub-gen",
]
high-precision = ["nautilus-model/high-precision"]

[package.metadata.cargo-machete]
ignored = [
  "nautilus-system",
] # Optional dep activated only via the python feature

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
nautilus-common = { workspace = true, features = ["live"] }
nautilus-core = { workspace = true }
nautilus-live = { workspace = true }
nautilus-model = { workspace = true }
nautilus-network = { workspace = true }
nautilus-system = { workspace = true, optional = true }

ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
ustr = { workspace = true }
zeroize = { workspace = true }

pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }

[dev-dependencies]
nautilus-testkit = { workspace = true }

dotenvy = { workspace = true }
rstest = { workspace = true }
tracing-subscriber = { workspace = true }

# Phase 0 spike: exercises OAuth refresh, account discovery, balances/positions/
# live orders, and the DXLink quote-token endpoint against the sandbox, dumping
# raw payloads to disk for schema mapping. Run with credentials in the env:
#   cargo run -p nautilus-tastytrade --example tastytrade-phase0
[[example]]
name = "tastytrade-phase0"
path = "examples/phase0_spike.rs"
doc = false
